Change swagger docs
