# goApi/docs/swagger.json
@@ -22,14 +22,7 @@
                     "report"
                 ],
                 "summary": "getAllReports",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/goapi.Report"
-                        }
-                    }
-                }
+                "responses": {}
             },
             "post": {
                 "description": "create report",
@@ -45,23 +38,16 @@
                 "summary": "createReport",
                 "parameters": [
                     {
-                        "description": "report info",
+                        "description": "Some description...",
                         "name": "input",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/goapi.Report"
+                            "$ref": "#/definitions/goapi.ReportRequest"
                         }
                     }
                 ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                }
+                "responses": {}
             }
         },
         "/api/reports/{id}": {
@@ -86,14 +72,7 @@
                         "required": true
                     }
                 ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/goapi.Report"
-                        }
-                    }
-                }
+                "responses": {}
             },
             "put": {
                 "description": "update report by id",
@@ -114,16 +93,18 @@
                         "name": "id",
                         "in": "path",
                         "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
+                    },
+                    {
+                        "description": "New description...",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
                         "schema": {
-                            "$ref": "#/definitions/goapi.Report"
+                            "$ref": "#/definitions/goapi.ReportRequest"
                         }
                     }
-                }
+                ],
+                "responses": {}
             },
             "delete": {
                 "description": "delete report by id",
@@ -146,26 +127,16 @@
                         "required": true
                     }
                 ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                }
+                "responses": {}
             }
         }
     },
     "definitions": {
-        "goapi.Report": {
+        "goapi.ReportRequest": {
             "type": "object",
             "properties": {
                 "description": {
                     "type": "string"
-                },
-                "id": {
-                    "type": "integer"
                 }
             }
         }
