# goApi/report.go
@@ -4,3 +4,7 @@ type Report struct {
 	Id          int    `json:"id"`
 	Description string `json:"description"`
 }
+
+type ReportRequest struct {
+	Description string `json:"description"`
+}
